2004-03-16  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs : Added PreserveWhitespace2() (whitespace nodes
	  should be written regardless of document.PreserveWhitespace.)

2004-03-15  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : Added tests for ReadInner/OuterXml() on
	  EndElement.

2004-03-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttributeCollectionTests.cs : Added InsertAfterError().
	* XmlNodeTests.cs : Added SelectNodes(), SelectNodes2() [commented].

2004-03-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs : added Implementation().

2004-02-17  Atsushi Enomoto <atsushi@ximian.com>

	* XmlEntityTests.cs, XmlDocumentEventTests.cs : added.

2004-02-05  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs : Added ReadNodeEmptyContent() and
	  ReadNodeWhitespace().
	* XmlElementTests.cs : Added SetAttributeNodeError().

2004-02-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlEntityReferenceTests.cs : renamed TestDescendantsRecursively to
	  DescendantsRecursively and added more test lines.
	  Added ChildNodes().
	* XmlReaderCommonTests.cs : Added MoveToXmlDeclAttribute(). However
	  it is ignored (since XmlNodeReader behaves differently, maybe bug).

2004-02-03  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReaderCommonTests.cs : Added SurrogatePairContent().
	* XmlDocumentTests.cs : Added LoadXmlReaderNamespacesFalse().
	* XmlEntityReferenceTests.cs : Added TestsDescendantsRecursively().

2004-01-28  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTypeTests.cs : Added IncorrectInternalSubset().
	* XmlNodeTests.cs : Since .NET 1.1 also prohibits multiple document
	  element, removed extraneous test switch for InsertBefore().
	* XsdParticleValidationTests.cs,
	  XsdValidatingReaderTests.cs : These test class names are too
	  ambiguous so just renamed them. (No bug reports are found on them,
	  but should be warned in the meantime.)

2004-01-23  Atsushi Enomoto <atsushi@ximian.com>
