@@ -1,3 +1,8 @@
+2004-03-31  Atsushi Enomoto <atsushi@ximian.com>
+
+	* Added nist_dom tests from Mainsoft hackers.
+	* Added XmlSecureResolverTests.cs.
+
 2004-03-16  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XmlDocumentTests.cs : Added PreserveWhitespace2() (whitespace nodes
